--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/express": "4.16.0",
     "@types/express-graphql": "0.6.2",
     "@types/graphql": "14.0.4",
-    "@types/i18next": "^12.1.0",
+    "@types/i18next": "12.1.0",
     "@types/js-yaml": "3.11",
     "@types/jsonpath": "0.2.0",
     "@types/jsonwebtoken": "8.3.0",
@@ -55,7 +55,7 @@
     "express": "4.16.4",
     "express-graphql": "0.7.1",
     "graphql": "14.0.2",
-    "i18next": "^13.1.0",
+    "i18next": "13.1.0",
     "ineeda": "0.12.0-alpha.0",
     "js-yaml": "3.12.1",
     "json-loader": "0.5.7",
@@ -83,7 +83,7 @@
     "standard-version": "4.4.0",
     "tslint": "5.12.0",
     "tslint-clean-code": "0.2.9",
-    "tslint-consistent-codestyle": "~1.15.0",
+    "tslint-consistent-codestyle": "1.15.0",
     "tslint-etc": "1.2.12",
     "tslint-loader": "3.6",
     "tslint-microsoft-contrib": "6.0.0",
