--- a/docs/listener/slack-listener.yml
+++ b/docs/listener/slack-listener.yml
@@ -2,6 +2,8 @@ metadata:
   kind: slack-listener
   name: slack-isolex
 data:
+  fetch:
+    window: 6000
   presence:
     game:
       name: Global Thermonuclear Warfare
