--- a/docs/controller/reaction-controller.yml
+++ b/docs/controller/reaction-controller.yml
@@ -10,4 +10,4 @@ data:
             operator: any
             values:
               - regexp: !regexp /maple/
-      add: [":maple:"]
+      add: [":maple_leaf:"]
