--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,8 +115,7 @@ climate-success:
   <<: [*build-climate]
   stage: status-post
   script:
-    - cc-test-reporter format-coverage -t lcov -o out/coverage/codeclimate.json -p ${CI_BUILD_DIR}
-    - cc-test-reporter upload-coverage -i out/coverage/codeclimate.json -r "$(echo ${CODECLIMATE_SECRET}" | base64 -d)"
+    - make upload-climate
 
 codecov-success:
   <<: [*build-node]
@@ -126,7 +125,7 @@ codecov-success:
   dependencies:
     - build-node
   script:
-    - ./node_modules/.bin/codecov --file out/coverage/lcov.info --token "$(echo "${CODECOV_SECRET}" | base64 -d)"
+    - make upload-codecov
 
 github-pending:
   <<: [*build-curl]
