--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "bunyan": "1.8",
     "chai": "4.2",
     "chai-as-promised": "7.1",
-    "codecov": "^3.1.0",
+    "codecov": "3.1.0",
     "cron": "1.6.0",
     "discord.js": "11.4",
     "escape-html": "1.0",
@@ -79,10 +79,10 @@
     "shiro-trie": "0.4.8",
     "sinon": "7.2.2",
     "sinon-chai": "3.3.0",
-    "source-map-support": "0.5.9",
+    "source-map-support": "0.5.10",
     "split-string": "6.0",
     "standard-version": "4.4.0",
-    "tslint": "5.12.0",
+    "tslint": "5.12.1",
     "tslint-clean-code": "0.2.9",
     "tslint-consistent-codestyle": "1.15.0",
     "tslint-etc": "1.2.12",
