build: load reference env before tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ build-node:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
+    - source docs/isolex.env
     - make build-strict
 
   artifacts:
