--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@kubernetes/client-node": "0.7.2",
-    "@octokit/rest": "^16.8.1",
+    "@octokit/rest": "16.8.1",
     "@slack/client": "4.8.0",
     "@types/bunyan": "1.8",
     "@types/chai": "4.1",
