build: use semantic commits in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,9 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+  "branchPrefix": "deps/",
+  "semanticCommitScope": "update",
+  "semanticCommitType": "deps",
+  "semanticCommits": true
 }
