--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,8 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    ":semanticCommitType(deps)",
+    ":semanticCommitScope(update)"
   ],
   "branchPrefix": "deps/",
   "semanticCommitScope": "update",
