--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,13 @@ stages:
   before_script:
     - echo "${NPM_SECRET}" | base64 -d > ${HOME}/.npmrc
 
+.build-sonar: &build-sonar
+  image: apextoaster/sonar-scanner:3.3
+  tags:
+    - platform:k8s
+    - runner:shared
+  allow_failure: false
+
 # build jobs
 build-node:
   <<: [*build-node]
@@ -101,6 +108,17 @@ build-image:
   script:
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
+
+build-sonar:
+  <<: [*build-sonar]
+  stage: build
+  script:
+    - sonar-scanner
+        -Dsonar.projectKey=ssube_isolex
+        -Dsonar.organization=ssube-github
+        -Dsonar.sources=src/
+        -Dsonar.host.url=https://sonarcloud.io
+        -Dsonar.login=${SONAR_SECRET}
 
 # publish jobs
 publish-npm:
