--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "4.16.4",
     "express-graphql": "0.7.1",
     "graphql": "14.1.1",
+    "handlebars": "^4.0.12",
     "i18next": "13.1.4",
     "ineeda": "0.12.0-alpha.0",
     "js-yaml": "3.12.1",
@@ -93,6 +94,7 @@
     "typeorm": "0.2.12",
     "typescript": "3.2.4",
     "utf-8-validate": "5.0.2",
+    "uuid": "^3.3.2",
     "webpack": "4.29.0",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.2.1",
