--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,47 @@
 {
-  "extends": "./config/tsconfig.json"
+  "compileOnSave": false,
+  "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": false,
+    "baseUrl": ".",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "jsx": "react",
+    "lib": [
+      "es2017",
+      "esnext.asynciterable"
+    ],
+    "module": "es6",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "paths": {},
+    "sourceMap": true,
+    "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "target": "es2017",
+    "types": [
+      "chai-as-promised",
+      "mocha",
+      "octokit-graphql",
+      "string-split"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "node_modules",
+      "vendor"
+    ]
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "src/**/*",
+    "test/**/*"
+  ]
 }
