--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sqlite3": "4.0.6"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.0",
     "@kubernetes/client-node": "0.8.1",
     "@octokit/rest": "16.15.0",
     "@slack/client": "4.9.0",
@@ -80,9 +81,10 @@
     "shiro-trie": "0.4.8",
     "sinon": "7.2.3",
     "sinon-chai": "3.3.0",
-    "source-map-support": "0.5.10",
+    "source-map-support": "^0.5.10",
     "split-string": "6.0.0",
     "standard-version": "5.0.0",
+    "ts-node": "^8.0.2",
     "tslint": "5.12.1",
     "tslint-clean-code": "0.2.9",
     "tslint-consistent-codestyle": "1.15.0",
@@ -107,7 +109,13 @@
     "**/typescript": "3.3.3"
   },
   "nyc": {
-    "instrument": true,
-    "sourceMap": true
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "include": [
+      "src"
+    ]
+  },
+  "scripts": {
+    "pretest": "make build",
+    "test": "node --max-old-space-size=8192 node_modules/.bin/nyc node_modules/.bin/mocha"
   }
 }
