--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "jsonpath": "1.0",
+    "jsonpath": "1.0.1",
     "sqlite3": "4.0.6"
   },
   "devDependencies": {
-    "@kubernetes/client-node": "0.8.1",
-    "@octokit/rest": "16.16.0",
-    "@slack/client": "4.9.0",
+    "@kubernetes/client-node": "0.8.2",
+    "@octokit/rest": "16.19.0",
+    "@slack/client": "4.11.0",
     "@types/bunyan": "1.8.6",
     "@types/chai": "4.1.7",
     "@types/chai-as-promised": "7.1.0",
@@ -42,27 +42,27 @@
     "@types/websocket": "0.0.40",
     "@types/ws": "6.0.1",
     "@types/yargs-parser": "11.0.2",
-    "ajv": "6.9.2",
+    "ajv": "6.10.0",
     "awesome-typescript-loader": "5.2.1",
-    "aws-sdk": "2.409.0",
+    "aws-sdk": "2.422.0",
     "bufferutil": "4.0.1",
     "bunyan": "1.8.12",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
-    "cron": "1.6.0",
+    "cron": "1.7.0",
     "discord.js": "11.4.2",
     "escape-html": "1.0.3",
     "express": "4.16.4",
     "express-graphql": "0.7.1",
     "graphql": "14.1.1",
     "handlebars": "4.1.0",
-    "i18next": "15.0.4",
+    "i18next": "15.0.7",
     "ineeda": "0.12.0-alpha.0",
-    "js-yaml": "3.12.1",
+    "js-yaml": "3.12.2",
     "json-loader": "0.5.7",
     "jsonwebtoken": "8.5.0",
     "lodash": "4.17.11",
-    "mathjs": "5.5.0",
+    "mathjs": "5.7.0",
     "mocha": "6.0.2",
     "node-emoji": "1.10.0",
     "noicejs": "2.5.2",
@@ -90,20 +90,19 @@
     "tslint-microsoft-contrib": "6.1.0",
     "tslint-sonarts": "1.9.0",
     "typedoc": "0.14.2",
-    "typeorm": "0.2.13",
+    "typeorm": "0.2.15",
     "typescript": "3.3.3333",
     "utf-8-validate": "5.0.2",
     "uuid": "3.3.2",
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "3.1.0",
     "webpack-cli": "3.3.0",
-    "ws": "6.1.4",
+    "ws": "6.2.0",
     "yaml-loader": "0.5.0",
     "yargs-parser": "13.0.0"
   },
   "resolutions": {
-    "**/lodash": "4.17.11",
-    "**/typescript": "3.3.3"
+    "**/lodash": "4.17.11"
   },
   "nyc": {
     "instrument": true,
