--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express-graphql": "0.7.1",
     "graphql": "14.1.1",
     "handlebars": "4.1.1",
+    "hard-source-webpack-plugin": "^0.13.1",
     "i18next": "15.0.7",
     "ineeda": "0.12.0-alpha.0",
     "js-yaml": "3.13.0",
@@ -63,10 +64,10 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.11",
     "mathjs": "5.8.0",
-    "mocha": "6.0.2",
+    "mocha": "6.1.4",
     "node-emoji": "1.10.0",
     "noicejs": "2.5.2",
-    "nyc": "13.3.0",
+    "nyc": "14.1.1",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
     "prom-client": "11.2.1",
@@ -77,26 +78,26 @@
     "rxjs": "6.4.0",
     "rxjs-tslint-rules": "4.19.0",
     "shiro-trie": "0.4.8",
-    "sinon": "7.3.0",
+    "sinon": "7.3.2",
     "sinon-chai": "3.3.0",
-    "source-map-support": "0.5.11",
+    "source-map-support": "0.5.12",
     "split-string": "6.0.0",
-    "standard-version": "5.0.2",
-    "tslint": "5.14.0",
+    "standard-version": "6.0.1",
+    "tslint": "5.16.0",
     "tslint-clean-code": "0.2.9",
     "tslint-consistent-codestyle": "1.15.1",
-    "tslint-etc": "1.3.2",
+    "tslint-etc": "1.5.2",
     "tslint-loader": "3.6.0",
-    "tslint-microsoft-contrib": "6.1.0",
+    "tslint-microsoft-contrib": "6.1.1",
     "tslint-sonarts": "1.9.0",
     "typedoc": "0.14.2",
     "typeorm": "0.2.15",
     "typescript": "3.3.4000",
     "utf-8-validate": "5.0.2",
     "uuid": "3.3.2",
-    "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "3.1.0",
-    "webpack-cli": "3.3.0",
+    "webpack": "4.31.0",
+    "webpack-bundle-analyzer": "3.3.2",
+    "webpack-cli": "3.3.2",
     "ws": "6.2.0",
     "yaml-loader": "0.5.0",
     "yargs-parser": "13.0.0"
