feat(endpoint/debug): add debug endpoint for svc config (#298)

--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -34,6 +34,7 @@ data:
     - !include ../docs/controller/user-controller.yml
     - !include ../docs/controller/weather-controller-owm.yml
   endpoints:
+    # !include ../docs/endpoint/debug-endpoint.yml
     - !include ../docs/endpoint/echo-endpoint.yml
   intervals:
     # !include ../docs/interval/command-interval.yml
