--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -12,7 +12,7 @@
       "es2017",
       "esnext.asynciterable"
     ],
-    "module": "es6",
+    "module": "esnext",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
