--- a/docs/listener/express-listener.yml
+++ b/docs/listener/express-listener.yml
@@ -7,10 +7,12 @@ data:
     name: test-discord
   expose:
     endpoints:
-      - kind: debug-endpoint
-        name: test-debug-endpoint
+      # kind: debug-endpoint
+      # name: test-debug-endpoint
       - kind: echo-endpoint
         name: test-echo-endpoint
+      - kind: gitlab-endpoint
+        name: test-gitlab-endpoint
     graph: true
     graphiql: true
     metrics: true
