feat(endpoint): add transforms to base endpoint, echo push hooks

--- a/docs/endpoint/gitlab-endpoint.yml
+++ b/docs/endpoint/gitlab-endpoint.yml
@@ -1,4 +1,10 @@
 metadata:
   kind: gitlab-endpoint
   name: test-gitlab-endpoint
-data: {}
+  labels:
+    gitlab: webhook
+data:
+  defaultCommand:
+    noun: echo
+    verb: create
+  transforms: []
