--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -21,6 +21,7 @@ data:
     - !include ../docs/controller/dice-controller.yml
     - !include ../docs/controller/github/pr-controller.yml
     - !include ../docs/controller/gitlab/ci-controller.yml
+    - !include ../docs/controller/gitlab/endpoint/push-controller.yml
     - !include ../docs/controller/kubernetes/apps-controller.yml
     - !include ../docs/controller/kubernetes/core-controller.yml
     - !include ../docs/controller/learn-controller.yml
