--- a/docs/isolex.env
+++ b/docs/isolex.env
@@ -5,6 +5,7 @@ export ISOLEX_GITLAB_TOKEN=""
 export ISOLEX_GITLAB_URL="https://"
 export ISOLEX_LEX_ACCOUNT_ACCESS_KEY=""
 export ISOLEX_LEX_ACCOUNT_SECRET_KEY=""
+export ISOLEX_SLACK_CHANNEL_ID="CEA8362AJ"
 export ISOLEX_SLACK_TOKEN_BOT="xoxb-"
 export ISOLEX_SLACK_TOKEN_WEB="xoxp-"
 export ISOLEX_TOKEN_ISSUER=""
