--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -75,6 +75,9 @@ data:
     - !include ../docs/parser/split-parser-math.yml
     - !include ../docs/parser/split-parser-sed.yml
     - !include ../docs/parser/yaml-parser.yml
+  process:
+    pid:
+      file: ./out/isolex.pid
   services:
     timeout: 5000
   storage:
