--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,8 @@
 {
   "extends": [
     "config:base",
-    ":semanticCommitType(deps)",
-    ":semanticCommitScope(update)"
+    ":semanticCommitTypeAll(update)",
+    ":semanticCommitScopeDisabled"
   ],
-  "branchPrefix": "deps/",
-  "semanticCommitScope": "update",
-  "semanticCommitType": "deps",
-  "semanticCommits": true
+  "branchPrefix": "update/"
 }
