--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@kubernetes/client-node": "0.10.2",
+    "@microsoft/api-documenter": "^7.3.17",
+    "@microsoft/api-extractor": "^7.3.9",
     "@octokit/rest": "16.28.4",
     "@slack/client": "5.0.1",
     "@types/bunyan": "1.8.6",
@@ -43,7 +45,6 @@
     "@types/ws": "6.0.1",
     "@types/yargs-parser": "13.0.0",
     "ajv": "6.10.2",
-    "awesome-typescript-loader": "5.2.1",
     "aws-sdk": "2.493.0",
     "bufferutil": "4.0.1",
     "bunyan": "1.8.12",
@@ -56,11 +57,9 @@
     "express-graphql": "0.9.0",
     "graphql": "14.4.2",
     "handlebars": "4.1.2",
-    "hard-source-webpack-plugin": "0.13.1",
     "i18next": "17.0.6",
     "ineeda": "0.12.0-alpha.0",
     "js-yaml": "3.13.1",
-    "json-loader": "0.5.7",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.14",
     "mathjs": "5.10.3",
@@ -75,6 +74,13 @@
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "request-promise-native": "1.0.7",
+    "rollup": "^1.20.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-multi-entry": "^2.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-typescript2": "^0.24.0",
     "rxjs": "6.5.2",
     "rxjs-tslint-rules": "4.24.3",
     "shiro-trie": "0.4.8",
@@ -87,7 +93,6 @@
     "tslint-clean-code": "0.2.9",
     "tslint-consistent-codestyle": "1.15.1",
     "tslint-etc": "1.5.6",
-    "tslint-loader": "3.6.0",
     "tslint-microsoft-contrib": "6.2.0",
     "tslint-sonarts": "1.9.0",
     "typedoc": "0.14.2",
@@ -95,15 +100,11 @@
     "typescript": "3.5.3",
     "utf-8-validate": "5.0.2",
     "uuid": "3.3.2",
-    "webpack": "4.35.3",
-    "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.6",
     "ws": "7.1.0",
-    "yaml-loader": "0.5.0",
     "yargs-parser": "13.1.1"
   },
   "resolutions": {
-    "**/lodash": "4.17.14",
+    "**/lodash": "4.17.15",
     "**/@types/graphql": "14.2.2"
   },
   "nyc": {
