fix(build): run default make target

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ build-node:
     GIT_SUBMODULE_STRATEGY: recursive
   script:
     - source docs/isolex.env
-    - make build-strict
+    - make
 
   artifacts:
     expire_in: 1 week
