--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "request-promise-native": "1.0.7",
     "rollup": "^1.20.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-external-globals": "^0.3.1",
+    "rollup-plugin-hypothetical": "^2.1.0",
     "rollup-plugin-ignore": "^1.0.5",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-multi-entry": "^2.1.0",
