--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
     "prom-client": "11.5.3",
-    "reflect-metadata": "0.1.13",
+    "reflect-metadata": "^0.1.13",
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "request-promise-native": "1.0.7",
@@ -81,6 +81,7 @@
     "rollup-plugin-ignore": "^1.0.5",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-multi-entry": "^2.1.0",
+    "rollup-plugin-node-externals": "^2.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-typescript2": "^0.24.0",
