--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "dependencies": {
     "jsonpath": "1.0.2",
-    "sqlite3": "4.0.9"
+    "sqlite3": "4.0.9",
+    "typeorm": "0.2.18"
   },
   "devDependencies": {
     "@kubernetes/client-node": "0.10.2",
@@ -85,6 +86,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-typescript2": "^0.24.0",
+    "rollup-plugin-yaml": "^1.1.0",
     "rxjs": "6.5.2",
     "rxjs-tslint-rules": "4.24.3",
     "shiro-trie": "0.4.8",
@@ -100,7 +102,6 @@
     "tslint-microsoft-contrib": "6.2.0",
     "tslint-sonarts": "1.9.0",
     "typedoc": "0.14.2",
-    "typeorm": "0.2.18",
     "typescript": "3.5.3",
     "utf-8-validate": "5.0.2",
     "uuid": "3.3.2",
