--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "mathjs": "5.10.3",
     "mocha": "6.1.4",
     "node-emoji": "1.10.0",
-    "noicejs": "2.5.2",
+    "noicejs": "3.0.0-0",
     "nyc": "14.1.1",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
