--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typeorm": "0.2.18"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@kubernetes/client-node": "0.10.2",
     "@microsoft/api-documenter": "^7.3.17",
     "@microsoft/api-extractor": "^7.3.9",
@@ -113,7 +114,6 @@
     "**/@types/graphql": "14.2.2"
   },
   "nyc": {
-    "instrument": true,
-    "sourceMap": true
+    "extends": "@istanbuljs/nyc-config-typescript"
   }
 }
