--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,9 +37,9 @@ stages:
   allow_failure: false
 
 .build-docker: &build-docker
-  image: docker:stable
+  image: docker:18.09.8
   services:
-    - docker:stable-dind
+    - docker:18.09.8-dind
   tags:
     - platform:k8s
     - runner:shared
@@ -50,7 +50,9 @@ stages:
     - mkdir ${HOME}/.docker
     - echo "${DOCKER_SECRET}" | base64 -d > ${HOME}/.docker/config.json
     - docker info
-
+  script:
+    - docker build -t $IMAGE_TAG .
+    - docker push $IMAGE_TAG
   after_script:
     - rm -rfv ${HOME}/.docker
 
@@ -92,23 +94,38 @@ build-node:
     paths:
       - out/coverage
       - out/docs
-      - out/main-bundle.*
-      - out/version.json
+      - out/*.js
+      - out/*.js.map
   cache:
     key: "${CI_COMMIT_REF_SLUG}"
     policy: pull-push
     paths:
       - node_modules
+      - out/cache
 
-build-image:
+build-image-branch:
   <<: [*build-docker]
   stage: image
+  except:
+    - tags
 
   dependencies:
     - build-node
-  script:
-    - docker build -t $IMAGE_TAG .
-    - docker push $IMAGE_TAG
+  variables:
+    <<: [*vars-docker]
+    IMAGE_TAG: "ssube/salty-dog:${CI_COMMIT_REF_SLUG}"
+
+build-image-tag:
+  <<: [*build-docker]
+  stage: image
+  only:
+    - tags
+
+  dependencies:
+    - build-node
+  variables:
+    <<: [*vars-docker]
+    IMAGE_TAG: "ssube/salty-dog:${CI_COMMIT_TAG}"
 
 # publish jobs
 publish-npm:
