--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "aws-sdk": "2.493.0",
+    "discord.js": "11.5.1",
     "jsonpath": "1.0.2",
+    "shelljs": "^0.8.3",
     "sqlite3": "4.0.9",
     "typeorm": "0.2.18"
   },
@@ -47,13 +50,11 @@
     "@types/ws": "6.0.1",
     "@types/yargs-parser": "13.0.0",
     "ajv": "6.10.2",
-    "aws-sdk": "2.493.0",
     "bufferutil": "4.0.1",
     "bunyan": "1.8.12",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "cron": "1.7.1",
-    "discord.js": "11.5.1",
     "escape-html": "1.0.3",
     "express": "4.17.1",
     "express-graphql": "0.9.0",
