--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@types/chai-as-promised": "7.1.2",
     "@types/cron": "1.7.1",
     "@types/escape-html": "0.0.20",
-    "@types/express": "4.17.0",
-    "@types/express-graphql": "0.8.0",
-    "@types/graphql": "14.2.2",
+    "@types/express": "4.17.1",
+    "@types/express-graphql": "0.9.0",
+    "@types/graphql": "14.5.0",
     "@types/i18next": "12.1.0",
     "@types/js-yaml": "3.12.1",
     "@types/jsonpath": "0.2.0",
@@ -58,7 +58,7 @@
     "escape-html": "1.0.3",
     "express": "4.17.1",
     "express-graphql": "0.9.0",
-    "graphql": "14.4.2",
+    "graphql": "14.5.4",
     "handlebars": "4.1.2",
     "i18next": "17.0.6",
     "ineeda": "0.12.0-alpha.0",
@@ -110,8 +110,7 @@
     "yargs-parser": "13.1.1"
   },
   "resolutions": {
-    "**/lodash": "4.17.15",
-    "**/@types/graphql": "14.2.2"
+    "**/lodash": "4.17.15"
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript"
