--- a/docs/parser/split-parser-math.yml
+++ b/docs/parser/split-parser-math.yml
@@ -21,5 +21,6 @@ data:
           - regexp: !regexp /!!math/
 
   split:
-    keepQuotes: true
+    keepQuotes: false
+    quotes: true
     separator: " "
