--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "aws-sdk": "2.537.0",
     "discord.js": "11.5.1",
-    "jsonpath": "1.0.2",
     "shelljs": "^0.8.3",
     "sqlite3": "4.1.0",
     "typeorm": "0.2.19"
@@ -32,7 +31,6 @@
     "@types/graphql": "14.5.0",
     "@types/i18next": "13.0.0",
     "@types/js-yaml": "3.12.1",
-    "@types/jsonpath": "0.2.0",
     "@types/jsonwebtoken": "8.3.4",
     "@types/lodash": "4.14.139",
     "@types/mathjs": "6.0.2",
@@ -63,6 +61,7 @@
     "i18next": "17.0.16",
     "ineeda": "0.12.0-alpha.0",
     "js-yaml": "3.13.1",
+    "jsonpath-plus": "^1.1.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
     "mathjs": "6.2.2",
