--- a/.npmignore
+++ b/.npmignore
@@ -5,19 +5,24 @@
 config/
 deploy/
 node_modules/
+out/cache/
 out/coverage/
 out/coverage-*
 out/docs/
+out/typings/
 out/*.db
 out/*.html
 out/*.json
 out/test-*
+out/tmp/
 scripts/
 src/
+temp/
 test/
 vendor/
 
 .codeclimate.yml
+.dockerignore
 .gitlab-ci.yml
 .gitmodules
 .mdlrc
