fix(build): include yml in bundle (fixes #396)

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -29,6 +29,7 @@
       "chai-as-promised",
       "mocha",
       "octokit-graphql",
+      "rollup-resources",
       "string-split"
     ],
     "typeRoots": [
