fix(tests): update to template helpers

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,138 +1,58 @@
+include:
+  - local: /config/gitlab/ci-tools.yml
+  - local: /config/gitlab/ci-rules.yml
+
 stages:
-  # @retain
   - status-pre
   - build
   - image
   - publish
   - status-post
 
-# template jobs
-
-.branch-deploy: &branch-deploy
-  only:
-    - master
-
-.build-curl: &build-curl
-  image: apextoaster/base:1.2
-  tags:
-    - platform:k8s
-    - runner:shared
-
-.build-climate: &build-climate
-  image: apextoaster/code-climate:0.6
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-  variables:
-    CI_BRANCH: "${CI_COMMIT_REF_NAME}"
-    GIT_BRANCH: "${CI_COMMIT_REF_NAME}"
-    GIT_COMMIT_SHA: "${CI_COMMIT_SHA}"
-
-.build-codecov: &build-codecov
-  image: apextoaster/codecov:3.1
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-
-.build-docker: &build-docker
-  image: docker:18.09.9
-  services:
-    - docker:18.09.9-dind
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-
-  before_script:
-    # prep secrets
-    - mkdir ${HOME}/.docker
-    - echo "${DOCKER_SECRET}" | base64 -d > ${HOME}/.docker/config.json
-    - docker info
-  script:
-    - docker build -t $IMAGE_TAG .
-    - docker push $IMAGE_TAG
-  after_script:
-    - rm -rfv ${HOME}/.docker
-
-  variables: &vars-docker
-    DOCKER_DRIVER: overlay2
-    DOCKER_HOST: tcp://localhost:2375
-    IMAGE_TAG: ssube/isolex:$CI_COMMIT_REF_SLUG
-
-.build-node: &build-node
-  image: apextoaster/node:10.1
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-
-  before_script:
-    - echo "${NPM_SECRET}" | base64 -d > ${HOME}/.npmrc
-
-.build-sonar: &build-sonar
-  image: apextoaster/sonar-scanner:3.3
-  tags:
-    - platform:k8s
-    - runner:shared
-  allow_failure: false
-
 # build jobs
 build-node:
-  <<: [*build-node]
   stage: build
+  extends:
+    - .build-node
 
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - source docs/isolex.env
-    - make ci
+    - make build test
 
   artifacts:
-    expire_in: 1 week
+    expire_in: 1 day
     paths:
-      - out/coverage
-      - out/docs
-      - out/*.js
-      - out/*.js.map
+      - out/
+
   cache:
     key: "${CI_COMMIT_REF_SLUG}"
     policy: pull-push
     paths:
-      - node_modules
-      - out/cache
+      - node_modules/
 
 build-image-branch:
-  <<: [*build-docker]
   stage: image
-  except:
-    - tags
+  extends:
+    - .build-docker
+    - .deploy-branches
 
   dependencies:
     - build-node
-  variables:
-    <<: [*vars-docker]
-    IMAGE_TAG: "ssube/salty-dog:${CI_COMMIT_REF_SLUG}"
 
 build-image-tag:
-  <<: [*build-docker]
   stage: image
-  only:
-    - tags
+  extends:
+    - .build-docker
+    - .deploy-tags
 
   dependencies:
     - build-node
-  variables:
-    <<: [*vars-docker]
-    IMAGE_TAG: "ssube/salty-dog:${CI_COMMIT_TAG}"
 
 # publish jobs
 publish-npm:
-  <<: [*build-node]
   stage: publish
-  only:
-    - tags
+  extends:
+    - .build-node
+    - .deploy-tags
 
   dependencies:
     - build-node
@@ -141,29 +61,37 @@ publish-npm:
 
 # commit status
 climate-pending:
-  <<: [*build-climate]
   stage: status-pre
+  extends:
+    - .build-climate
+
   script:
     - cc-test-reporter before-build
 
 climate-failure:
-  <<: [*build-climate]
   stage: status-post
+  extends:
+    - .build-climate
+
   when: on_failure
   script:
     - cc-test-reporter after-build --debug --exit-code 1
 
 climate-success:
-  <<: [*build-climate]
   stage: status-post
+  extends:
+    - .build-climate
+
   dependencies:
     - build-node
   script:
     - make upload-climate
 
 codecov-success:
-  <<: [*build-codecov]
   stage: status-post
+  extends:
+    - .build-codecov
+
   when: on_success
   dependencies:
     - build-node
@@ -171,40 +99,27 @@ codecov-success:
     - make upload-codecov
 
 github-pending:
-  <<: [*build-curl]
   stage: status-pre
+  extends:
+    - .build-curl
+
   script:
-    - ./scripts/github-status.sh pending
+    - ${CI_PROJECT_DIR}/scripts/github-status.sh pending
 
 github-failure:
-  <<: [*build-curl]
   stage: status-post
+  extends:
+    - .build-curl
+
   when: on_failure
   script:
-    - ./scripts/github-status.sh failure
+    - ${CI_PROJECT_DIR}/scripts/github-status.sh failure
 
 github-success:
-  <<: [*build-curl]
   stage: status-post
-  when: on_success
-  script:
-    - ./scripts/github-status.sh success
+  extends:
+    - .build-curl
 
-sonar-success:
-  <<: [*build-sonar]
-  stage: status-post
   when: on_success
-  dependencies:
-    # @retain
-    - build-node
   script:
-    # @retain
-    - make node_modules
-    - sonar-scanner
-        -Dsonar.projectKey=ssube_isolex
-        -Dsonar.projectVersion=${CI_COMMIT_REF_SLUG}
-        -Dsonar.organization=ssube-github
-        -Dsonar.sources=src/,test/
-        -Dsonar.host.url=https://sonarcloud.io
-        -Dsonar.login=${SONAR_SECRET}
-        -Dsonar.typescript.lcov.reportPaths=out/coverage/lcov.info
+    - ${CI_PROJECT_DIR}/scripts/github-status.sh success
