--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "isolex",
   "version": "0.8.0",
   "description": "isolex chat bot",
-  "main": "out/main-bundle.js",
+  "main": "out/main.js",
   "repository": "https://github.com/ssube/isolex",
   "author": "ssube",
   "license": "MIT",
