--- a/docs/test.yml
+++ b/docs/test.yml
@@ -46,10 +46,10 @@ data:
     # !include ../docs/interval/message-interval.yml
     - !include ../docs/interval/metrics-interval.yml
   listeners:
-    - !include ../docs/listener/discord-listener.yml
+    # !include ../docs/listener/discord-listener.yml
     - !include ../docs/listener/express-listener.yml
     - !include ../docs/listener/github-listener.yml
-    - !include ../docs/listener/slack-listener.yml
+    # !include ../docs/listener/slack-listener.yml
   locale:
     metadata:
       kind: locale
