feat(template): entries helper iterates dicts as well

--- a/docs/controller/github/pr-controller.yml
+++ b/docs/controller/github/pr-controller.yml
@@ -11,12 +11,14 @@ data:
       data:
         templates:
           body: >-
-            {{#each data }}
+            {{#entries this }}
+            {{#each value }}
               PR#{{ number }}: {{ title }} (by {{ user.login }})
-            {{/each}}
+            {{/each }}
+            {{/entries }}
     - metadata:
         kind: flatten-transform
         name: github-pr-body
       data:
         join: " "
-        keys: [$.data.body]
+        keys: [$.body]
